<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dpassword</string>
    <string name="transcribe_mnemonic_code">Save these 12 mnemonics</string>
    <string name="mnemonic_notice">You can only recover your account with these mnemonics. Once lost, it will not be recovered!</string>
    <string name="do_not_take_screenshot">Please do not take a screenshot</string>
    <string name="start_confirm_mnemonic_code">Start verification</string>
    <string name="did_u_transcribe">Have you already copied these mnemonics?</string>
    <string name="please_confirm_again">Please enter again to confirm!</string>
    <string name="forget_transcribe_go_back">Forgot to copy? Go back</string>
    <string name="please_click_one_by_one">Please click to finish input orderly</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="me">Account</string>
    <string name="create_new_account">Create account</string>
    <string name="recover_from_seed">Recover from mnemonics</string>
    <string name="I_have_read">I have read and agree</string>
    <string name="dpassword_user_protocol">DPASSWORD USER PROTOCOL</string>
    <string name="go_back">Back</string>
    <string name="_1_4">1/4</string>
    <string name="_2_4">2/4</string>
    <string name="_3_4">3/4</string>
    <string name="_4_4">4/4</string>
    <string name="save_mnemonic">Please do not save mnemonics with screenshots. Use paper and pen to write carefully. In order to ensure security, a set of cryptograms will be regenerated, please write again</string>
    <string name="confirm">Confirm</string>
    <string name="already_record_mnemonic">Have you already copied these mnemonics?</string>
    <string name="input_again_to_confirm">Please enter again to confirm!</string>
    <string name="mnemonic_confirm_failed">The input mnemonics are inconsistent with the previous. Please check it again!</string>
    <string name="please_set_password">Enter your password</string>
    <string name="input_password_again">Enter your password again</string>
    <string name="password_not_equal">Inconsistent password entry twice</string>
    <string name="create_account_failed">Account creation failed</string>
    <string name="entrys_library">Keystore</string>
    <string name="add_entry">Add key</string>
    <string name="account_balance">Account balance</string>
    <string name="nas">NAS</string>
    <string name="zero_balance">--.--</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="generate_new_password">Generate new password</string>
    <string name="generate_password">Generate password</string>
    <string name="length">Length</string>
    <string name="password_error">Invalid password</string>
    <string name="enter_again">Enter again</string>
    <string name="enter_password">Enter password</string>
    <string name="save_failed">Save failed</string>
    <string name="save_success">Save success</string>
    <string name="copy_password">Copy password</string>
    <string name="copy_failed">Copy failed</string>
    <string name="copy_success">Copy success</string>
    <string name="unlock_failed">Unlock failed</string>
    <string name="enter_password_to_unlock">Enter password to unlock</string>
    <string name="nas_address">NAS Address</string>
    <string name="edit">Edit</string>
    <string name="entry_detail">Key detail</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Delete success</string>
    <string name="ensure_whether_delete">Confirm to delete?</string>
    <string name="splash_slogan">Keystore expert based on blockchain</string>
    <string name="key_verify_failed">Password verify failed</string>
    <string name="key_manager_by_your_self">You own private key</string>
    <string name="more_security">More Confidence</string>
    <string name="data_store_on_block_chain">Data encrypt stored on blockchain</string>
    <string name="more_seurce">More Safety</string>
    <string name="start_use">Start to use</string>
    <string name="sync_data_failed">Sync data failed</string>
    <string name="insufficient_balance">Insufficient balance</string>
    <string name="first_sync_tip">Backup, update and delete keys all need to consume NAS, please make sure the account has at least 0.000001 NAS</string>
    <string name="click_sync_to_blockchain">Click sync to blockchain</string>
    <string name="input_key_words_incorrect">Incorrect input, please check the mnemonic passphrase</string>
    <string name="please_input_secret_words">Please enter mnemonic passphrase</string>
    <string name="import_account">Import account</string>
    <string name="url_optional">URL(optional)</string>
</resources>
