<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parentView"
    android:background="@color/secondaryBackgroundColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@string/cancel"
            android:textColor="@color/toolbar_action_text_color"
            android:textSize="@dimen/text_size_15"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@string/add"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_15"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@string/save"
            android:textColor="@color/toolbar_action_text_color"
            android:textSize="@dimen/text_size_15"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/label_color"
            android:textSize="@dimen/text_size_12"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_input_height"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_15"
            android:maxLines="1"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_optional"
            android:textColor="@color/label_color"
            android:textSize="@dimen/text_size_12"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="2dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtUrl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_input_height"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_15"
            android:maxLines="1"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/label_color"
            android:textSize="@dimen/text_size_12"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="2dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_input_height"
            android:textColor="@color/primaryTextColor"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/text_size_15"
            android:maxLines="1"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/label_color"
            android:textSize="@dimen/text_size_12"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/default_input_height"
                android:layout_weight="1"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_size_15"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/ivEye"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_eye_close"
                android:scaleType="centerInside"
                android:contentDescription="@null"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvGenerate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/generate_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_15"
            android:paddingBottom="10dp"/>

    </LinearLayout>

</LinearLayout>