<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryBackgroundColor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/go_back"
            android:textColor="@color/white"
            android:gravity="center"
            android:drawableStart="@drawable/ic_chevron_left"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_1_4"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/default_edge_margin"
            android:textSize="@dimen/text_size_15"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_edge_margin"
        android:paddingEnd="@dimen/default_edge_margin"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:background="@color/colorPrimary"
        android:translationZ="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transcribe_mnemonic_code"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mnemonic_notice"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size_13"
            android:gravity="center"
            android:layout_marginStart="@dimen/default_edge_margin_large"
            android:layout_marginEnd="@dimen/default_edge_margin_large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_take_screenshot"
            android:background="@drawable/primary_arc_button"
            android:textColor="@color/warningYellow"
            android:layout_marginTop="18dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:layout_marginTop="-20dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_marginStart="@dimen/default_edge_margin"
            android:layout_marginEnd="@dimen/default_edge_margin"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp">

            <android.support.v7.widget.RecyclerView
                android:id="@id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingStart="@dimen/default_edge_margin"
                android:paddingEnd="@dimen/default_edge_margin">

            </android.support.v7.widget.RecyclerView>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height_large"
            android:background="@drawable/button_create"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/default_edge_margin"
            android:layout_marginEnd="@dimen/default_edge_margin"
            android:layout_marginTop="30dp"
            android:text="@string/start_confirm_mnemonic_code"/>

    </LinearLayout>

</LinearLayout>