<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/refreshLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentView"
        android:background="@color/secondaryBackgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_account"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_balance"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_13" />

            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_balance"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_48" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nas"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="@dimen/default_edge_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nas_address"
                android:textColor="@color/label_color"
                android:textSize="@dimen/text_size_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size_15"
                    android:layout_marginEnd="4dp"
                    android:textIsSelectable="true"/>

                <ImageView
                    android:id="@+id/ivCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_copy"
                    android:scaleType="centerInside"
                    android:contentDescription="@null"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>