<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/create_logo"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_large"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="@dimen/edge_margin_23"
        android:layout_marginStart="@dimen/edge_margin_23"
        android:background="@drawable/button_create"
        android:elevation="@dimen/default_elevation"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnImport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnImport"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_large"
        android:layout_marginEnd="@dimen/edge_margin_23"
        android:layout_marginStart="@dimen/edge_margin_23"
        android:layout_marginBottom="@dimen/edge_margin_23"
        android:background="@drawable/button_import"
        android:elevation="@dimen/default_elevation"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/recover_from_seed"
        android:textAllCaps="false"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@id/llProtocol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llProtocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="28dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/I_have_read"
            android:textAllCaps="false"
            android:textColor="@color/primaryGray"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tvProtocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dpassword_user_protocol"
            android:layout_marginStart="2dp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

</android.support.constraint.ConstraintLayout>