<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryBackgroundColor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/go_back"
            android:textColor="@color/white"
            android:gravity="center"
            android:drawableStart="@drawable/ic_chevron_left"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:id="@+id/tvStep"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_4_4"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/default_edge_margin"
            android:textSize="@dimen/text_size_15"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_edge_margin"
        android:paddingEnd="@dimen/default_edge_margin"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:background="@color/colorPrimary"
        android:translationZ="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_password_again"
            android:layout_marginTop="11dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:layout_marginTop="-15dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_marginStart="@dimen/default_edge_margin"
            android:layout_marginEnd="@dimen/default_edge_margin"
            app:cardElevation="@dimen/default_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="60dp"
                android:paddingBottom="60dp">

                <com.dpass.android.widgets.PinView
                    style="@style/PinWidget.PinView"
                    android:id="@+id/pinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:cursorVisible="false"
                    android:layout_marginTop="10dp"
                    app:lineColor="@color/transparent"
                    app:itemBodyColor="@color/pin_view_border_fill"
                    app:itemCount="6"
                    app:cursorWidth="2dp"
                    app:lineWidth="1dp"
                    app:viewType="rectangle" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    </LinearLayout>

</LinearLayout>